--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "dev:cms": "concurrently \"npm run dev\" \"npm run cms\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^3.0.0",
     "decap-cms-app": "^3.8.3",
     "gray-matter": "^4.0.3",
     "next": "15.5.0",
