--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # testing
 /coverage
+/test-results
+/playwright-report
 
 # next.js
 /.next/
@@ -24,6 +26,7 @@
 # misc
 .DS_Store
 *.pem
+git-timetravel.sh
 
 # debug
 npm-debug.log*
