--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Generated image variants
+public/uploads/*-thumb.*
+public/uploads/*-mobile.*
+public/uploads/*-desktop.*
