--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,10 @@
   command = "npm run build"
   publish = "out"
 
+[[redirects]]
+  from = "/"
+  to = "/hu/"
+  status = 302
 
 [build.environment]
   NODE_VERSION = "18"
