--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cms": "decap-server",
     "dev:cms": "concurrently \"npm run dev\" \"npm run cms\"",
     "process-images": "tsx scripts/process-images.ts",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test": "playwright test",
+    "test:ui": "playwright test --ui"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
