--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,15 @@
 [build]
   command = "npm run build"
   publish = "out"
+  functions = "netlify/functions"
+
+[functions]
+  node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/api/vote"
+  to = "/.netlify/functions/vote"
+  status = 200
 
 [[redirects]]
   from = "/"
