--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^3.0.0",
+    "@netlify/blobs": "^10.5.0",
+    "@netlify/functions": "^5.1.2",
     "decap-cms-app": "^3.8.3",
     "gray-matter": "^4.0.3",
     "next": "^15.5.9",
